--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/xamarin.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin.html","headline":"Scanbot SDK for Xamarin","@type":"WebPage","@context":"https://schema.org"}</script>
+{"headline":"Scanbot SDK for Xamarin","@type":"WebPage","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -1023,6 +1023,14 @@ To further improve the user experience you might want to automatically take a ph
 
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
+
+<h4 id="scanbotsdkxamarin---version-202-6-august-2020">ScanbotSDK.Xamarin - Version 2.0.2 (6 August 2020)</h4>
+
+<p>🐞 Bug fixes:</p>
+
+<ul>
+  <li>Droid: Fixed binding issue with <code class="highlighter-rouge">ContourDetectorFrameHandler</code></li>
+</ul>
 
 <h4 id="scanbotsdkxamarin---version-200-19-june-2020">ScanbotSDK.Xamarin - Version 2.0.0 (19 June 2020)</h4>
 
