--- a/cordova/index.html
+++ b/cordova/index.html
@@ -2458,6 +2458,15 @@ It allows you to create and distribute dedicated and smaller APKs <strong>via Pl
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history">Release History</h2>
 
+<h4 id="version-421-6-aug-2020">Version 4.2.1 (6 Aug 2020):</h4>
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>iOS: Improved the download script of the iOS SDK framework in order to support the npm HTTP proxy settings</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="version-420-3-aug-2020">Version 4.2.0 (3 Aug 2020):</h4>
 
 <ul>
