--- a/barcode-scanner-sdk/ios/Protocols/SBSDKUIBarcodesBatchScannerViewControllerDelegate.html
+++ b/barcode-scanner-sdk/ios/Protocols/SBSDKUIBarcodesBatchScannerViewControllerDelegate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SBSDKAspectRatio Class Reference</title>
+    <title>SBSDKUIBarcodesBatchScannerViewControllerDelegate Protocol Reference</title>
     <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/objc/Class/SBSDKAspectRatio" class="dashAnchor"></a>
+    <a name="//apple_ref/objc/Protocol/SBSDKUIBarcodesBatchScannerViewControllerDelegate" class="dashAnchor"></a>
 
-    <a title="SBSDKAspectRatio Class Reference"></a>
+    <a title="SBSDKUIBarcodesBatchScannerViewControllerDelegate Protocol Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -38,7 +38,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../index.html">ScanbotBarcodeScannerSDK for iOS Reference</a>
       <img class="carat" src="../img/carat.png" />
-      SBSDKAspectRatio Class Reference
+      SBSDKUIBarcodesBatchScannerViewControllerDelegate Protocol Reference
     </p>
 
     <div class="content-wrapper">
@@ -385,14 +385,15 @@
 
         <section class="section">
           <div class="section-content">
-            <h1>SBSDKAspectRatio</h1>
+            <h1>SBSDKUIBarcodesBatchScannerViewControllerDelegate</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight objective_c"><code><span class="k">@interface</span> <span class="nc">SBSDKAspectRatio</span> <span class="p">:</span> <span class="nc">NSObject</span></code></pre>
+                  <pre class="highlight objective_c"><code><span class="k">@protocol</span> <span class="nc">SBSDKUIBarcodesBatchScannerViewControllerDelegate</span> <span class="o">&lt;</span>
+    <span class="n"><a href="../Protocols/SBSDKUIViewControllerDelegate.html">SBSDKUIViewControllerDelegate</a></span><span class="o">&gt;</span></code></pre>
 
                 </div>
               </div>
-            <p>A class that describes an aspect ratio for a documents page. *</p>
+            <p>Delegate protocol for &lsquo;SBSDKUIBarcodesBatchScannerViewController&rsquo;.</p>
 
           </div>
         </section>
@@ -404,9 +405,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKAspectRatio(py)width"></a>
-                    <a name="//apple_ref/objc/Property/width" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKAspectRatio(py)width">width</a>
+                    <a name="/c:objc(pl)SBSDKUIBarcodesBatchScannerViewControllerDelegate(im)barcodesBatchScannerViewController:didFinishWithResults:"></a>
+                    <a name="//apple_ref/objc/Method/-barcodesBatchScannerViewController:didFinishWithResults:" class="dashAnchor"></a>
+                    <a class="token" href="#/c:objc(pl)SBSDKUIBarcodesBatchScannerViewControllerDelegate(im)barcodesBatchScannerViewController:didFinishWithResults:">-barcodesBatchScannerViewController:didFinishWithResults:</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -414,115 +415,23 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>The width of the documents page. Unit independant. *</p>
+                        <p>Informs the delegate that one or more barcodes have been detected and the view controller has dismissed.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">readonly</span><span class="p">)</span> <span class="kt">double</span> <span class="n">width</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="kt">void</span><span class="p">)</span><span class="nf">barcodesBatchScannerViewController</span><span class="p">:</span>
+            <span class="p">(</span><span class="n">nonnull</span> <span class="n"><a href="../Classes/SBSDKUIBarcodesBatchScannerViewController.html">SBSDKUIBarcodesBatchScannerViewController</a></span> <span class="o">*</span><span class="p">)</span><span class="nv">viewController</span>
+                      <span class="nf">didFinishWithResults</span><span class="p">:</span>
+                          <span class="p">(</span><span class="n">nonnull</span> <span class="n">NSArray</span><span class="o">&lt;</span><span class="n"><a href="../Classes/SBSDKUIBarcodeMappedResult.html">SBSDKUIBarcodeMappedResult</a></span> <span class="o">*&gt;</span> <span class="o">*</span><span class="p">)</span>
+                              <span class="n">barcodeResults</span><span class="p">;</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">width</span><span class="p">:</span> <span class="kt">Double</span> <span class="p">{</span> <span class="k">get</span> <span class="p">}</span></code></pre>
-
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/c:objc(cs)SBSDKAspectRatio(py)height"></a>
-                    <a name="//apple_ref/objc/Property/height" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKAspectRatio(py)height">height</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>The height of the documents page. Unit independant. *</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">readonly</span><span class="p">)</span> <span class="kt">double</span> <span class="n">height</span><span class="p">;</span></code></pre>
-
-                        </div>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">height</span><span class="p">:</span> <span class="kt">Double</span> <span class="p">{</span> <span class="k">get</span> <span class="p">}</span></code></pre>
-
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/c:objc(cs)SBSDKAspectRatio(py)ratio"></a>
-                    <a name="//apple_ref/objc/Property/ratio" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKAspectRatio(py)ratio">ratio</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>The aspect ratio of the receiver expressed as a double value of width divided by height. *</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">readonly</span><span class="p">)</span> <span class="kt">double</span> <span class="n">ratio</span><span class="p">;</span></code></pre>
-
-                        </div>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">ratio</span><span class="p">:</span> <span class="kt">Double</span> <span class="p">{</span> <span class="k">get</span> <span class="p">}</span></code></pre>
-
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/c:objc(cs)SBSDKAspectRatio(im)initWithWidth:andHeight:"></a>
-                    <a name="//apple_ref/objc/Method/-initWithWidth:andHeight:" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKAspectRatio(im)initWithWidth:andHeight:">-initWithWidth:andHeight:</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Designated initializer.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="n">nonnull</span> <span class="n">instancetype</span><span class="p">)</span><span class="nf">initWithWidth</span><span class="p">:(</span><span class="kt">double</span><span class="p">)</span><span class="nv">width</span> <span class="nf">andHeight</span><span class="p">:(</span><span class="kt">double</span><span class="p">)</span><span class="nv">height</span><span class="p">;</span></code></pre>
-
-                        </div>
-                        <div class="language">
-                          <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="nf">init</span><span class="p">(</span><span class="nv">width</span><span class="p">:</span> <span class="kt">Double</span><span class="p">,</span> <span class="n">andHeight</span> <span class="nv">height</span><span class="p">:</span> <span class="kt">Double</span><span class="p">)</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">func</span> <span class="nf">barcodesBatchScannerViewController</span><span class="p">(</span><span class="n">_</span> <span class="nv">viewController</span><span class="p">:</span> <span class="kt"><a href="../Classes/SBSDKUIBarcodesBatchScannerViewController.html">SBSDKUIBarcodesBatchScannerViewController</a></span><span class="p">,</span> <span class="n">didFinishWith</span> <span class="nv">barcodeResults</span><span class="p">:</span> <span class="p">[</span><span class="kt"><a href="../Classes/SBSDKUIBarcodeMappedResult.html">SBSDKUIBarcodeMappedResult</a></span><span class="p">])</span></code></pre>
 
                         </div>
                       </div>
@@ -533,24 +442,24 @@
                             <tr>
                               <td>
                                 <code>
-                                <em>width</em>
+                                <em>viewController</em>
                                 </code>
                               </td>
                               <td>
                                 <div>
-                                  <p>The width of the documents page.</p>
+                                  <p>The detection view controller that detected barcode(s).</p>
                                 </div>
                               </td>
                             </tr>
                             <tr>
                               <td>
                                 <code>
-                                <em>height</em>
+                                <em>barcodeResults</em>
                                 </code>
                               </td>
                               <td>
                                 <div>
-                                  <p>The height of the documents page.</p>
+                                  <p>An array of SBSDKBarcodeScannerResult objects containing detected barcodes.</p>
                                 </div>
                               </td>
                             </tr>
@@ -563,9 +472,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKAspectRatio(im)inverted"></a>
-                    <a name="//apple_ref/objc/Method/-inverted" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKAspectRatio(im)inverted">-inverted</a>
+                    <a name="/c:objc(pl)SBSDKUIBarcodesBatchScannerViewControllerDelegate(im)barcodesBatchScannerViewControllerDidCancel:"></a>
+                    <a name="//apple_ref/objc/Method/-barcodesBatchScannerViewControllerDidCancel:" class="dashAnchor"></a>
+                    <a class="token" href="#/c:objc(pl)SBSDKUIBarcodesBatchScannerViewControllerDelegate(im)barcodesBatchScannerViewControllerDidCancel:">-barcodesBatchScannerViewControllerDidCancel:</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -573,49 +482,41 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Returns an inverted copy of the receiver. Inverted here means that width and height are swapped and therefore
-the resulting aspect ratio is the reciproke of the receivers aspect ratio.</p>
+                        <p>Optional: informs the delegate that the &lsquo;SBSDKUIBarcodesBatchScannerViewController&rsquo; has been cancelled and dismissed.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="n">nonnull</span> <span class="n">instancetype</span><span class="p">)</span><span class="n">inverted</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="kt">void</span><span class="p">)</span><span class="nf">barcodesBatchScannerViewControllerDidCancel</span><span class="p">:</span>
+    <span class="p">(</span><span class="n">nonnull</span> <span class="n"><a href="../Classes/SBSDKUIBarcodesBatchScannerViewController.html">SBSDKUIBarcodesBatchScannerViewController</a></span> <span class="o">*</span><span class="p">)</span><span class="nv">viewController</span><span class="p">;</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">func</span> <span class="nf">inverted</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="k">Self</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">optional</span> <span class="kd">func</span> <span class="nf">barcodesBatchScannerViewControllerDidCancel</span><span class="p">(</span><span class="n">_</span> <span class="nv">viewController</span><span class="p">:</span> <span class="kt"><a href="../Classes/SBSDKUIBarcodesBatchScannerViewController.html">SBSDKUIBarcodesBatchScannerViewController</a></span><span class="p">)</span></code></pre>
 
                         </div>
                       </div>
-                    </section>
-                  </div>
-                </li>
-                <li class="item">
-                  <div>
-                    <code>
-                    <a name="/c:objc(cs)SBSDKAspectRatio(im)init"></a>
-                    <a name="//apple_ref/objc/Method/-init" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKAspectRatio(im)init">-init</a>
-                    </code>
-                  </div>
-                  <div class="height-container">
-                    <div class="pointer-container"></div>
-                    <section class="section">
-                      <div class="pointer"></div>
-                      <div class="abstract">
-                        <p>Not available.</p>
-
-                      </div>
-                      <div class="declaration">
-                        <h4>Declaration</h4>
-                        <div class="language">
-                          <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">-</span> <span class="p">(</span><span class="n">nonnull</span> <span class="n">instancetype</span><span class="p">)</span><span class="n">init</span><span class="p">;</span></code></pre>
-
-                        </div>
+                      <div>
+                        <h4>Parameters</h4>
+                        <table class="graybox">
+                          <tbody>
+                            <tr>
+                              <td>
+                                <code>
+                                <em>viewController</em>
+                                </code>
+                              </td>
+                              <td>
+                                <div>
+                                  <p>The &lsquo;SBSDKUIBarcodesBatchScannerViewController&rsquo; that did dismiss.</p>
+                                </div>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
                       </div>
                     </section>
                   </div>
