Update docs for the Android Barcode SDK release v1.1.5

--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -554,7 +554,16 @@ e.g. JPG files from photo library or other sources.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
-<h3 id="version-114-14-aug-2020">Version 1.1.4 (14 Aug 2020)</h3>
+<h3 id="version-115-20-aug-2020">Version 1.1.5 (20 Aug 2020)</h3>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Fixed hanging frame processing in <code class="highlighter-rouge">CameraView</code> after pausing if the orientation was not locked</li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="version-114-14-aug-2020">Version 1.1.4 (14 Aug 2020)</h4>
 <ul>
   <li>🎉 New:
     <ul>
